--- a/Assignments/Assignment01/assignment1.html
+++ b/Assignments/Assignment01/assignment1.html
@@ -31,6 +31,7 @@
         </div>
     </header>
     <article>
+        <h2 id="heading">BMR Calculator</h2>
         <button class="accordion">Metric BMR Calculator</button>
         <div class="panel">
             <form method="post">
@@ -38,45 +39,47 @@
                     <br />
                     <div>
                         <label for="genderMetric">Gender:</label>
-                        <select name="genderMetric" id="genderMetric" required="required">
-                            <option value="male" id="male">Male</option>
-                            <option value="female" id="female">Female</option>
+                        <select name="genderMetric" id="genderMetric">
+                            <option value="maleM">Male</option>
+                            <option value="femaleM">Female</option>
                         </select>
                     </div>
                     <div>
                         <label for="ageMetric">Age:</label>
-                        <input type="number" step="any" min="0" name="ageMetric" id="ageMetric" required="required">
+                        <input type="number" step="any" min="0" name="ageMetric" id="ageMetric" value="0" required="required">
                     </div>
                     <div>
-                        <label for="heightMetric">Height <small>&nbsp;(e.g. 183)</small>:</label>
+                        <label for="heightMetric">Height <small>&nbsp;(e.g. 180)</small>:</label>
                         <input type="number" step="any" min="0" name="heightMetric" id="heightMetric" value="0" required="required">
                         <span>cm</span>
                         <br />
                     </div>
                     <div>
-                        <label for="weightMetric">Weight <small>&nbsp;(e.g. 63)</small>:</label>
+                        <label for="weightMetric">Weight <small>&nbsp;(e.g. 70)</small>:</label>
                         <input type="number" step="any" min="0" name="weightMetric" id="weightMetric" value="0" required="required">
                         <span>kg</span>
                         <br />
                     </div>
-                    <br>
-                    <strong><label class="activity1">Select your activity level:</label></strong>
+                    <br />
+                    <div>
+                        <strong><label class="activity1">Select your activity level:</label></strong>
+                        <br />
+                        <br />
+                        <input type="radio" value="1.2" name="levelMetric" class="activity">
+                        <span>I am sedentary (little or no exercise)</span><br />
+                        <input type="radio" value="1.375" name="levelMetric" class="activity">
+                        <span>I am lightly active (light exercise or sports 1-3 days per week)</span><br />
+                        <input type="radio" value="1.55" name="levelMetric" class="activity">
+                        <span>I am moderately active (moderate exercise or sports 3-5 days per week)</span><br />
+                        <input type="radio" value="1.725" name="levelMetric" class="activity">
+                        <span>I am very active (hard exercise or sports 6-7 days per week)</span><br />
+                        <input type="radio" value="1.9" name="levelMetric" class="activity">
+                        <span>I am super active (very hard exercise or sports and a physical job or 2x training)</span>
+                    </div>
                     <br />
                     <br />
-                    <input type="radio" id="levelMetric" value="1.2" name="levelMetric" class="activity">
-                    <span>I am sedentary (little or no exercise)</span><br>
-                    <input type="radio" id="levelMetric" value="1.375" name="levelMetric" class="activity">
-                    <span>I am lightly active (light exercise or sports 1-3 days per week)</span><br>
-                    <input type="radio" id="levelMetric" value="1.55" name="levelMetric" class="activity">
-                    <span>I am moderately active (moderate exercise or sports 3-5 days per week)</span><br>
-                    <input type="radio" id="levelMetric" value="1.725" name="levelMetric" class="activity">
-                    <span>I am very active (hard exercise or sports 6-7 days per week)</span><br>
-                    <input type="radio" id="levelMetric" value="1.9" name="levelMetric" class="activity">
-                    <span>I am super active (very hard exercise or sports and a physical job or 2x training)</span>
-                    <br />
-                    <br />
-                    <div id="calcButton">
-                        <button type="button" name="button" id="calculateButton" onclick="CalculateMetric()">Calculate Metric BMR</button>
+                    <div id="calcButtonM">
+                        <button type="button" name="button" id="calculateButtonM" onclick="CalculateMetric()">Calculate Metric BMR</button>
                     </div>
                 </div>
             </form>
@@ -88,14 +91,14 @@
                     <br />
                     <div>
                         <label for="genderImperial">Gender:</label>
-                        <select name="genderImperial" id="genderImperial" required="required">
-                            <option value="male" id="male">Male</option>
-                            <option value="female" id="female">Female</option>
+                        <select name="genderImperial" id="genderImperial">
+                            <option value="maleI">Male</option>
+                            <option value="femaleI">Female</option>
                         </select>
                     </div>
                     <div>
                         <label for="ageImperial">Age:</label>
-                        <input type="number" step="any" min="0" name="ageImperial" id="ageImperial" required="required">
+                        <input type="number" step="any" min="0" name="ageImperial" id="ageImperial" value="0" required="required">
                     </div>
                     <br />
                     <label class="activity1"><b>Your height</b></label>
@@ -122,26 +125,29 @@
                         <input type="number" step="any" min="0" name="poundImperial" id="poundImperial" value="0">
                     </div>
                     <br />
-                    <strong><label class="activity1">Select your activity level:</label></strong>
+                    <div>
+                        <strong><label class="activity1">Select your activity level:</label></strong>
+                        <br />
+                        <br />
+                        <input type="radio" value="1.2" name="levelImperial" class="activity">
+                        <span>I am sedentary (little or no exercise)</span><br />
+                        <input type="radio"  value="1.375" name="levelImperial" class="activity">
+                        <span>I am lightly active (light exercise or sports 1-3 days per week)</span><br />
+                        <input type="radio" value="1.55" name="levelImperial" class="activity">
+                        <span>I am moderately active (moderate exercise or sports 3-5 days per week)</span><br />
+                        <input type="radio" value="1.725" name="levelImperial" class="activity">
+                        <span>I am very active (hard exercise or sports 6-7 days per week)</span><br />
+                        <input type="radio" value="1.9" name="levelImperial" class="activity">
+                        <span>I am super active (very hard exercise or sports and a physical job or 2x training)</span>
+                    </div>
                     <br />
                     <br />
-                    <input type="radio" id="levelImperial" value="1.2" name="levelImperial" class="activity">
-                    <span>I am sedentary (little or no exercise)</span><br>
-                    <input type="radio" id="levelImperial" value="1.375" name="levelImperial" class="activity">
-                    <span>I am lightly active (light exercise or sports 1-3 days per week)</span><br>
-                    <input type="radio" id="levelImperial" value="1.55" name="levelImperial" class="activity">
-                    <span>I am moderately active (moderate exercise or sports 3-5 days per week)</span><br>
-                    <input type="radio" id="levelImperial" value="1.725" name="levelImperial" class="activity">
-                    <span>I am very active (hard exercise or sports 6-7 days per week)</span><br>
-                    <input type="radio" id="levelImperial" value="1.9" name="levelImperial" class="activity">
-                    <span>I am super active (very hard exercise or sports and a physical job or 2x training)</span>
-                    <br />
-                    <br />
-                    <div id="calcButton">
-                        <button type="button" name="button" id="calculateButton" onclick="CalculateImperial()">Calculate Imperial BMR</button>
+                    <div id="calcButtonI">
+                        <button type="button" name="button" id="calculateButtonI" onclick="CalculateImperial()">Calculate Imperial BMR</button>
                     </div>
                 </div>
             </form>
+        </div>
     </article>
     <footer>
         <p id="name">Logan Kim COMP125 Page, Copyright &copy; 2018</p>
