--- a/Assignments/Assignment01/assignment1.html
+++ b/Assignments/Assignment01/assignment1.html
@@ -20,7 +20,7 @@
                     <button onclick="dropdown()" class="dropbtn">Assignments</button>
                     <div id="myDropdown" class="dropdown-content">
                         <a href="#" class="actives">Assignment 1</a>
-                        <a href="#">Assignment 2</a>
+                        <a href="../Assignment02/assignment2.html">Assignment 2</a>
                         <a href="#">Assignment 3</a>
                         <a href="#">Assignment 4</a>
                         <a href="#">Assignment 5</a>
