--- a/Assignments/Assignment01/assignment1.html
+++ b/Assignments/Assignment01/assignment1.html
@@ -21,8 +21,8 @@
                     <div id="myDropdown" class="dropdown-content">
                         <a href="#" class="actives">Assignment 1</a>
                         <a href="../Assignment02/assignment2.html">Assignment 2</a>
-                        <a href="#">Assignment 3</a>
-                        <a href="#">Assignment 4</a>
+                        <a href="../Assignment03/photos.htm">Assignment 3</a>
+                        <a href="../Assignment04/assignment4.html">Assignment 4</a>
                         <a href="#">Assignment 5</a>
                         <a href="#">Assignment 6</a>
                     </div>
