--- a/inClass/Week05/index.html
+++ b/inClass/Week05/index.html
@@ -3,22 +3,17 @@
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="utf-8" />
-    <title>Array List</title>
-    <style>
-    #myDIV {
-        border: 1px solid black;
-        margin: 5px;
-    }
-    </style>
+    <title>Week05</title>
 </head>
 <body>
     <header>
         <h1>Week05</h1>
     </header>
     <ul id="navList">
-        <li class="topnav"><a href="aboutus.htm">About Us</a></li>
-        <li class="topnav"><a href="order.htm">Order</a></li>
-        <li class="topnav"><a href="support.htm">Support</a></li>
+        <li><a href="aboutus.html">About Us</a></li>
+        <li><a href="order.html">Order</a></li>
+        <li><a href="support.html">Support</a></li>
     </ul>
+    <script type="text/javascript" src="myscript.js"></script>
 </body>
 </html>
